chore: fixes search bar visibility

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -525,6 +525,10 @@ body {
 .main-header {
     background-color: $search-background-color;
     border-bottom: $border #E6E8F0;
+
+    .search {
+        margin-top: 60px;
+    }
 }
 
 .site-title:hover { background: transparent !important; }
@@ -605,6 +609,10 @@ body {
 }
 
 @media (min-width: 50rem) {
+    .main-content-wrap {
+        padding-top: 60px;
+    }
+
     .side-bar { 
         flex-wrap: nowrap; 
         position: fixed; 
